# SparseAutoschedulingBenchmark

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  run_benchmark.py  triangleCounting.py
.github/workflows/: ci.yml  publish.yml
InputData/Jacobi/: nos1.mtx  nos6.mtx
src/SparseAutoschedulingBenchmark/: BenchmarkRunner.py  BinsparseFormat.py  __init__.py  einsum.py
src/SparseAutoschedulingBenchmark/Benchmarks/: CG.py  CP_ALS.py  GCN.py  Jacobi.py  MatMul.py  PageRank.py  RLA_Benchmark.py  diBELLA_2d.py  fIntegrationSparse  fis.py  jacobi_matrices.json  matrix_norms.json  scrape_matrices.py
src/SparseAutoschedulingBenchmark/Frameworks/: AbstractFramework.py  CheckerFramework.py  FillValueTensor.py  NumpyFramework.py  PyDataSparseFramework.py  __init__.py  einsum.py
src/SparseAutoschedulingBenchmark/Utils/: b_file_finder.py  cg_matrices.json  scrape_matrices.py
src/SparseAutoschedulingBenchmark/Wrappers/: AbstractWrapper.py  NumpyWrapper.py
src/sparse_autoscheduling_benchmark/: BinsparseFormat.py  run_benchmark.py
src/sparse_autoscheduling_benchmark/Benchmarks/: DenseMM.py  MatMul.py
src/sparse_autoscheduling_benchmark/Wrappers/: AbstractWrapper.py  NumpyWrapper.py
tests/: RLA_Benchmark.py  conftest.py  test_cg.py  test_cp_als.py  test_einsum.py  test_gcn.py  test_harness.py  test_jacobi.py  test_matmul.py  test_pagerank.py  test_user.py
